--- a/index.html
+++ b/index.html
@@ -281,8 +281,9 @@
                  <p class="mt-4 text-lg text-center font-semibold text-green-200">This is how transformation happens. Not in a single flash flood, but in the steady, faithful growth of small, intentional actions.</p>
              </div>
 
-             <div class="mt-10 text-center">
-                 <button data-target="page-1" class="nav-btn bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-8 rounded-lg transition">Start Over</button>
+             <div class="mt-10 text-center flex flex-col sm:flex-row justify-center items-center gap-4">
+                 <button data-target="page-1" class="nav-btn bg-slate-600 hover:bg-slate-700 text-white font-bold py-3 px-8 rounded-lg transition">Start Over</button>
+                 <a href="https://universalbookstudios.github.io/The-Artist-Journey/" target="_blank" rel="noopener noreferrer" class="nav-btn bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-8 rounded-lg transition inline-block">Continue to learn it with a song</a>
              </div>
         </div>
 
@@ -312,6 +313,9 @@
             };
 
             navButtons.forEach(button => {
+                // Check if it's a link (<a> tag) or a button
+                if(button.tagName.toLowerCase() === 'a') return;
+                
                 button.addEventListener('click', () => {
                     const targetId = button.dataset.target;
                     showPage(targetId);
